--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zendesk-server",
   "version": "1.0.0",
   "description": "Server to get tickets from Zendesk Api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "test"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ZeeshanM20/zendesk-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
   }
 }
